--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name="description" content="Bienvenue sur le site du restaurant Le Quai Antique à Annecy. Découvrez notre délicieuse cuisine, nos plats faits maison et notre ambiance chaleureuse. Réservez dès maintenant votre table en ligne.">
+		<meta name="keywords" content="restaurant, Le Quai Antique, Annecy, cuisine, plats faits maison, réservation en ligne">
+		<meta name="author" content="Le Chef MICHANT">
 		<title>
 			{% block title %}Bienvenue au restaurant le Quai Antique
 			{% endblock %}
