--- a/templates/registration/success.html.twig
+++ b/templates/registration/success.html.twig
@@ -4,21 +4,21 @@
 {% endblock %}
 {% block content %}
 	<main class="main_container container-fluid">
-		<div class="logoQAw">
-			<img src="{{ asset('assets/img/logoQAw.png') }}" alt="" class="logoQAw">
-		</div>
 		<div class="carteSection">
 			<div class="col col-lg-6 col-sm-12 col-md-7 flexCol">
 				<div class="groupTitleBtn">
 					<div class="card p-3 schudeleContainer">
-						<div class="card-body">
-							<div class="alert alert-success text-center">
-								Merci pour votre inscription, vous pouvez accéder à votre espace personnel maintenant !
+						<div class="card-header text-center">
+							<img src="{{ asset('assets/img/logoQAnavBlack.png') }}" alt="Logo du Quai Antique" class="logoQAw">
+							<h1 class="card-title">Inscription effectuée</h1>
+							<div class="card-body">
+								<div class="alert alert-success text-center">
+									Merci pour votre inscription, vous pouvez accéder à votre espace personnel maintenant !
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</main>
-{% endblock %}
+		</main>
+	{% endblock %}
