--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -4,20 +4,22 @@
 {% endblock %}
 
 {% block content %}
-	<main class="mainPersoCcontainer container-fluid">
+	<main class="mainPersoContainer container-fluid">
 		<section class="sectionContainerLeft">
 			<div class="mainSectionContainerLeft">
 				<div class="titleContainerLeft">
 					<h1 class="titleLeft">
-						~ Bienvenue dans votre espace client ~</h1>
-					<p>
+						Bienvenue dans votre espace client</h1>
+					<hr>
+					<p class="accountNamed">
 						Cet espace appartient à
-						<b>{{app.User.firstname}}
-							{{app.User.lastname}}</b>
+						<b>{{app.User.firstname}} {{app.User.lastname}}</b>
 					</p>
 					<p class="description">Ici vous pouvez consulter vos informations personnelles, réserver une table en mode VIP consulter vos dernières réservations.</p>
-					<h3 class="description">Vos informations personnelles</h3>
-					<p>Vous pouvez modifier vos informations personnelles directement en utilisant les champs ci-dessous. Ces informations seront pris en compte lors de vos prochaines réservations.</p>
+					<hr>
+					<h2>Vos informations personnelles</h2>
+					<br>
+					<p class="description">Vous pouvez modifier vos informations personnelles directement en utilisant les champs ci-dessous. Ces informations seront pris en compte lors de vos prochaines réservations.</p>
 				</div>
 				{{ form_start(form) }}
 				<div class="FormContainerLeft row-cols-5">
@@ -49,25 +51,26 @@
 					</div>
 					<div class="form-group mb-3"></div>
 				</div>
-				<h2 class="description">Vos dernières réservations</h2>
+				<hr>
+				<h2>Vos dernières réservations</h2>
+				<br>
 				<table class="tableReservation">
 					<thead>
 						<tr>
-							<th>Date de réservation</th>
-							<th>Horaire</th>
-							<th>Nombre de couverts</th>
+							<th class="th">Date de réservation</th>
+							<th class="th">Horaire</th>
+							<th class="th">Nombre de couverts</th>
 						</tr>
 					</thead>
 					<tbody>
 						{% for userReservation in userReservation %}
 							<tr>
-
-								<td>
+								<td class="td">
 									{{ userReservation.date|date('m/d/Y', 'Europe/Paris') }}
 								</td>
 
-								<td>{{ userReservation.heure|date('h:i', 'Europe/Paris') }}</td>
-								<td>{{ userReservation.guestsNumber }}</td>
+								<td class="td">{{ userReservation.heure|date('h:i', 'Europe/Paris') }}</td>
+								<td class="td">{{ userReservation.guestsNumber }}</td>
 							</tr>
 							{# {{ dump(userReservation) }} #}
 						{% endfor %}
@@ -78,8 +81,9 @@
 		<section class="sectionContainerRight">
 			<div class="form-group text-center reservationAvailabilityAccountCard">
 				<div class="titleContaineRight">
-					<h2 class="titleLeft">~ Réservez une table maintenant ~</h2>
+					<h2 class="titleLeft">Réservez une table maintenant</h2>
 				</div>
+				<hr>
 				<div class="reservationFormContainer">
 					<div class="form-group mb-3">
 						{{ form_label(form.date) }}
@@ -92,26 +96,24 @@
 						{{ form_errors(form.heure) }}
 					</div>
 				</div>
-				<div class="reservationFormContainer">
+				<div>
 					<div class="form-group mb-3">
 						<button type="submit" class="btn btn-primary px-4">Réserver</button>
 					</div>
 				</div>
+
+								<hr>
 				{{ form_end(form) }}
 			</div>
 			<div class="form-group text-center dinerAvailability">
-				<h5 class="">
-					<b>~ Nos disponibilités pour le dîner ~</b>
-				</h5>
+				<h3>Nos disponibilités pour le dîner</h3>
 				<div class="availability-slots">
 					<div id="time-slots" class="mt-3"></div>
 				</div>
 			</div>
 			<hr>
 			<div class="form-group text-center lunchAvailability">
-				<h5 class="">
-					<b>~ Nos disponibilités pour le déjeuner ~</b>
-				</h5>
+				<h3>Nos disponibilités pour le déjeuner</h3>
 				<div class="availability-slots">
 					<div id="time-slots2" class="mt-3"></div>
 				</div>
@@ -120,8 +122,9 @@
 			<div class="form-group text-center legendAndInfo">
 				<div class="legendGreen">
 					<div class="legendGreenCub"></div>
-					<div class="legendGreenText">"Créneaux horaires encore disponibles.</div>
+					<div class="legendGreenText">Créneaux horaires encore disponibles.</div>
 				</div>
+				<br>
 				<div class="legendRed">
 					<div class="legendRedCub"></div>
 					<div class="legendRedText">Créneaux horaires non disponibles.</div>
