--- a/public/assets/css/stylePageperso.css
+++ b/public/assets/css/stylePageperso.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&display=swap");
 
 /*VERSION MOBILE*/
-@media only screen and (max-width: 1024px) and (orientation: portrait){
+@media only screen and (max-width: 1024px) and (orientation: portrait) {
   .mainPersoContainer {
     display: flex;
     flex-wrap: wrap;
@@ -24,7 +24,7 @@
     padding-right: 30px;
     padding-top: 30px;
     padding-left: 30px;
-    padding-bottom: 30px;;
+    padding-bottom: 30px;
   }
 
   .mainSectionContainerLeft {
@@ -49,9 +49,8 @@
     font-size: 1.5rem;
   }
 
-  .accountNamed{
+  .accountNamed {
     font-size: 2rem;
-
   }
 
   .FormContainerLeft {
@@ -95,15 +94,15 @@
     background-color: #f2f2f2;
   }
 
-  .th{
+  .th {
     font-size: 1.8rem;
   }
-  .td{
+  .td {
     text-align: center;
     font-size: 1.5rem;
   }
 
-  .tr{
+  .tr {
     font-size: 1.5rem;
   }
 
@@ -119,7 +118,7 @@
     padding-right: 30px;
     padding-top: 30px;
     padding-left: 30px;
-    padding-bottom: 30px;;
+    padding-bottom: 30px;
   }
 
   .sectionContainerAvailable {
@@ -147,7 +146,7 @@
     align-items: center;
   }
 
-  .reservationAvailabilityAccountCard{
+  .reservationAvailabilityAccountCard {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -162,84 +161,85 @@
     width: 100%;
   }
 
-  h2, h3 {
+  h2,
+  h3 {
     font-size: 3rem;
     text-align: center;
     font-weight: 600;
-}
+  }
 
-#time-slots, #time-slots2 {
-  display: flex;
-  justify-items: center;
-  justify-content: flex-start;
-  flex-wrap: wrap;
-  gap: 6px;
-}
+  #time-slots,
+  #time-slots2 {
+    display: flex;
+    justify-items: center;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    gap: 6px;
+  }
 
-.legendAndInfo {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-}
+  .legendAndInfo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
 
-.legendGreen {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  width: 100%;
-  height: 20px;
-  gap: 5px;
-}
+  .legendGreen {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    height: 20px;
+    gap: 5px;
+  }
 
-.legendGreenCub {
-  width: 60px;
-  height: 60px;
-  background-color: #198754;
-  opacity: 70%;
-}
+  .legendGreenCub {
+    width: 60px;
+    height: 60px;
+    background-color: #198754;
+    opacity: 70%;
+  }
 
-.legendGreenText{
-  font-size: 1.5rem;
-}
+  .legendGreenText {
+    font-size: 1.5rem;
+  }
 
-.legendRed {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  width: 100%;
-  height: 20px;
-  gap: 5px;
-}
+  .legendRed {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    height: 20px;
+    gap: 5px;
+  }
 
-.legendRedCub {
-  width: 60px;
-  height: 60px;
-  background-color: #dc3545;
-  opacity: 70%;
-}
+  .legendRedCub {
+    width: 60px;
+    height: 60px;
+    background-color: #dc3545;
+    opacity: 70%;
+  }
 
-.legendRedText{
-  font-size: 1.5rem;
-}
+  .legendRedText {
+    font-size: 1.5rem;
+  }
 
-.info {
-  display: flex;
-  font-size: 2rem;
-  flex-direction: column;
-  justify-content: flex-start;
-  font-style: italic;
-}
+  .info {
+    display: flex;
+    font-size: 2rem;
+    flex-direction: column;
+    justify-content: flex-start;
+    font-style: italic;
+  }
 
-.btn-primary{
-  width: 200px;
-  height: 80px;
-  font-size: 1.8rem;
-}
-
+  .btn-primary {
+    width: 200px;
+    height: 80px;
+    font-size: 1.8rem;
+  }
 }
 /*Desktop Version*/
 @media only screen and (min-width: 1024px) {
@@ -254,7 +254,7 @@
     align-items: flex-start;
     justify-content: center;
     padding: 3rem;
- }
+  }
 
   /*Bloc left*/
 
@@ -358,7 +358,7 @@
     width: 100%;
   }
 
-  .reservationAvailabilityAccountCard{
+  .reservationAvailabilityAccountCard {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -370,13 +370,27 @@
     flex-direction: column;
     justify-content: flex-start;
     font-style: italic;
-}
+  }
 
-.form-control{
-  width: 300px;
-}
+  .form-control {
+    display: block;
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: 0.375rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  }
 
-#newsletter1{
-  margin-right: 2rem;
-}
+  #newsletter1 {
+    margin-right: 2rem;
+  }
 }
