--- a/public/assets/css/stylePageperso.css
+++ b/public/assets/css/stylePageperso.css
@@ -273,6 +273,7 @@
   .mainSectionContainerLeft {
     display: flex;
     flex-direction: column;
+    padding: 20px;
   }
 
   .titleContainerLeft {
