--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 	<head>
 		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta viewport="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Bienvenue sur le site du restaurant Le Quai Antique à Annecy. Découvrez notre délicieuse cuisine, nos plats faits maison et notre ambiance chaleureuse. Réservez dès maintenant votre table en ligne.">
 		<meta name="keywords" content="restaurant, Le Quai Antique, Annecy, cuisine, plats faits maison, réservation en ligne">
 		<meta name="author" content="Le Chef MICHANT">
