--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,7 @@
 		<header>
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container-fluid">
-					<img src="{{ asset('assets/img/logoQAnav.png') }}" alt="" class="logoQAnav">
+					<img src="{{ asset('assets/img/logoQAnav.png') }}" href="{{ path('app_accueil') }}" alt="logo du quai antique" class="logoQAnav">
 
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
