--- a/templates/reservation/index.html.twig
+++ b/templates/reservation/index.html.twig
@@ -87,7 +87,7 @@
 					</div>
 					<hr>
 					{% for restaurant in restaurant %}
-					<p class="info">Pour une réservation au delàs de 12 personnes, merci de nous contacter :</p><p> par téléphone au <b>{{ restaurant.phoneNumber }}.</b></p><p> ou par e-mail à <email><b>{{ restaurant.email }}.</b></email>
+					<p class="info">Pour une réservation au-delà de 12 personnes, merci de nous contacter :</p><p> par téléphone au <b>{{ restaurant.phoneNumber }}.</b></p><p> ou par e-mail à <email><b>{{ restaurant.email }}.</b></email>
 					</p>
 					<p><em> * Notre salle contient {{ restaurant.maxSeats }} couverts maximum.</em></p>
 					{% endfor %}
